[TP1] Added solutions for TP1 - EX2